--- a/bio.html
+++ b/bio.html
@@ -59,7 +59,7 @@
           <a href="directory.html"><li>Directory</li></a>
           <br>
           <li id="external"><a href="https://instagram.com/www_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
-          <li id="external"><a href="mailto:calebwws@virginmedia.com">email</a></li>
+          <li id="external"><a href="mailto:info@caleb-woodward.net">email</a></li>
 
         </ul>
 
