--- a/cv.html
+++ b/cv.html
@@ -48,6 +48,7 @@
 
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
+            <a href="structures.html"><li>Structures</li></a>
             <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
