--- a/bio.html
+++ b/bio.html
@@ -23,6 +23,8 @@
       <div class="headL">
         <p></p>
         <p  id="title">➝ Caleb Woodward</p>
+        <p id="info" style="color:white;">.</p>
+        <p>Language: <a href="bio.html">en</a> /<u><a href="jp/bio.html"> jp </a></u></p>
 
 
         <p></p>
