--- a/jp/bio.html
+++ b/jp/bio.html
@@ -22,9 +22,11 @@
 
       <div class="headL">
         <p></p>
-        <p id="title">➝ Caleb Woodward </p>
+        <p  id="title">➝ Caleb Woodward</p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../bio.html">en</a></u> /<a href="../jp/bio.html"> jp </a></p>
+
+
 
         <p></p>
 
@@ -50,12 +52,13 @@
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
             <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
+            <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
           <br>
 
-          <a href="bio.html"><li>Bio</li></a>
+
+          <a href="bio.html"><li>Bio :</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html"><li>Memo</li></a>
 
@@ -76,27 +79,14 @@
 
     <div class="content">
 
-      <div id="theList">
+      <div class="twosplit">
+        <p>Caleb Woodward</p>
+        <p></p>
+        <p></p>
+        <p>Caleb Woodward is a Multidiciplinary Designer & Artist based in London. He is currently studying Design BA at Goldsmiths. In the past he has studied a 3D Design & Architecture Foundation at Central st. Martins.</p>
 
-        <section>
-          <p> GARMENTS</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
-            <p></p>
-            <p> 2021</p>
-          </div></a>
-
-
-        </section>
+        <p></p>
+        <p></p>
 
 
 
