--- a/bio.html
+++ b/bio.html
@@ -82,7 +82,7 @@
         <p>Caleb Woodward</p>
         <p></p>
         <p></p>
-        <p>Caleb Woodward is a Multidiciplinary Designer & Artist based in London. He is currently studying Design BA at Goldsmiths. In the past he has studied a 3D Design & Architecture Foundation at Central st. Martins.</p>
+        <p>Caleb Woodward is a Multidiciplinary Designer & Artist based in London. He graduated with a BA in Design at Goldsmiths. In the past he has studied a 3D Design & Architecture Foundation at Central st. Martins.</p>
 
         <p></p>
         <p></p>
